[gd_scene load_steps=5 format=2]

[ext_resource path="res://DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Lobby.gd" type="Script" id=2]
[ext_resource path="res://DefaultDynamicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Intro.gd" type="Script" id=4]

[node name="Lobby" type="Control"]
margin_left = 31.0
margin_top = 1.0
margin_right = 144.0
margin_bottom = 110.0
rect_scale = Vector2( 1.3, 1.3 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="buttonHost" type="Button" parent="."]
visible = false
margin_left = 28.0
margin_top = 306.0
margin_right = 208.0
margin_bottom = 345.0
text = "Host"

[node name="buttonJoin" type="Button" parent="."]
visible = false
margin_left = 28.0
margin_top = 310.0
margin_right = 208.0
margin_bottom = 352.0
text = "Join"

[node name="IpInput" type="LineEdit" parent="."]
editor/display_folded = true
visible = false
margin_left = 29.0
margin_top = 188.0
margin_right = 211.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 3 )
text = "127.0.0.1"
placeholder_text = "IP"

[node name="Label" type="Label" parent="IpInput"]
margin_left = 11.0
margin_top = -33.0
margin_right = 131.0
margin_bottom = 4.0
custom_fonts/font = ExtResource( 3 )
text = "IP"
valign = 1

[node name="Port" type="LineEdit" parent="."]
editor/display_folded = true
visible = false
margin_left = 28.0
margin_top = 257.0
margin_right = 210.0
margin_bottom = 298.0
custom_fonts/font = ExtResource( 3 )
text = "2424"
placeholder_text = "Port"

[node name="Label" type="Label" parent="Port"]
margin_left = 2.0
margin_top = -31.0
margin_right = 131.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 3 )
text = "Port"
valign = 1

[node name="maxPlayers" type="LineEdit" parent="."]
editor/display_folded = true
visible = false
margin_left = 30.0
margin_top = 123.0
margin_right = 212.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 3 )
text = "12"
placeholder_text = "Max Players"

[node name="Label" type="Label" parent="maxPlayers"]
margin_left = 8.0
margin_top = -32.0
margin_right = 176.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 3 )
text = "Max players"
valign = 1

[node name="PlayerName" type="LineEdit" parent="."]
editor/display_folded = true
visible = false
margin_left = 30.0
margin_top = 55.0
margin_right = 212.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 3 )
text = "Lazy"
placeholder_text = "Name"

[node name="Label" type="Label" parent="PlayerName"]
margin_left = 9.0
margin_top = -37.0
margin_right = 169.0
custom_fonts/font = ExtResource( 3 )
text = "Your Name"
valign = 1

[node name="Back" type="Button" parent="."]
visible = false
margin_left = 64.0526
margin_top = 429.939
margin_right = 168.053
margin_bottom = 469.939
text = "Cancel"

[node name="ReinitTimer" type="Timer" parent="."]
autostart = true

[node name="Intro" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 34.132, 132.969 )
scale = Vector2( 1.35453, 1.23516 )
script = ExtResource( 4 )

[node name="Client" type="Button" parent="Intro"]
margin_left = -21.0
margin_top = -21.0
margin_right = 140.0
margin_bottom = 20.0
theme = ExtResource( 1 )
text = "Client"

[node name="Server" type="Button" parent="Intro"]
margin_left = -21.0
margin_top = 29.0
margin_right = 140.0
margin_bottom = 67.0
theme = ExtResource( 1 )
text = "Server"

[node name="Rules" type="Button" parent="Intro"]
margin_left = -21.0
margin_top = 143.0
margin_right = 140.0
margin_bottom = 181.0
theme = ExtResource( 1 )
text = "Rules"

[node name="List" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 2.52979, 19.7838 )
scale = Vector2( 1.10084, 1.10084 )

[node name="PlayerList" type="ItemList" parent="List"]
margin_left = -10.0
margin_top = -10.0
margin_right = 213.0
margin_bottom = 261.0
theme = ExtResource( 1 )

[node name="StartGame" type="Button" parent="List"]
margin_left = 16.8507
margin_top = 322.234
margin_right = 193.851
margin_bottom = 368.234
theme = ExtResource( 1 )
text = "Start Game"

[node name="Ip" type="Label" parent="List"]
margin_left = 0.302361
margin_top = 267.822
margin_right = 203.302
margin_bottom = 298.822
custom_fonts/font = ExtResource( 3 )
text = "No IP to show"
align = 1
valign = 1

[node name="Port" type="Label" parent="List"]
margin_left = -4.0
margin_top = 289.0
margin_right = 199.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
[connection signal="pressed" from="buttonHost" to="." method="_on_buttonHost_pressed"]
[connection signal="pressed" from="buttonJoin" to="." method="_on_buttonJoin_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="timeout" from="ReinitTimer" to="." method="_on_ReinitTimer_timeout"]
[connection signal="pressed" from="Intro/Client" to="Intro" method="_on_Client_pressed"]
[connection signal="pressed" from="Intro/Server" to="Intro" method="_on_Server_pressed"]
[connection signal="pressed" from="Intro/Rules" to="." method="_on_Rules_pressed"]
[connection signal="pressed" from="List/StartGame" to="." method="_on_StartGame_pressed"]
